fixed overlapping text in qa-cards

--- a/src/components/study/training/qa-card/qa-card.scss
+++ b/src/components/study/training/qa-card/qa-card.scss
@@ -4,11 +4,17 @@
 .qa-card {
   @extend %ui-card-base;
 
-  position: absolute;
-  z-index: 1;
   height: 100%;
   width: 100%;
+  z-index: 1;
+  position: absolute;
   padding-right: 0;
+
+  .fields-container {
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
+  }
 
   .qa-card-bottom {
     position: absolute;
